examples/test/testpolicy10649.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10649
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key9: value18
      key3: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value30
      podSelector:
        matchLabels:
          key43: value45
          key14: value21
